tests/ui/issues/issue-1362.stderr
error[E0308]: mismatched types
  --> $DIR/issue-1362.rs:4:16
   |
LL |   let x: u32 = 20i32;
   |          ---   ^^^^^ expected `u32`, found `i32`
   |          |
   |          expected due to this
   |
help: change the type of the numeric literal from `i32` to `u32`
   |
LL |   let x: u32 = 20u32;
   |                  ~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
